--- a/src/App.css
+++ b/src/App.css
@@ -1,36 +1,79 @@
+@import url('https://fonts.googleapis.com/css2?family=Amarante&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Brush+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Brush+Script&family=Reenie+Beanie&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Hina+Mincho&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Yuji+Syuku&display=swap');
+
+html, body {
+  font-family: 'Caveat';
+  background: radial-gradient(rgb(255, 255, 255),  rgb(245,242,241));
+  overflow: hidden !important;
+}
+
+.custom-navbar {
+  width: 100%;
+  font-family: 'Caveat';
+  font-size: 2em;
+  background-color: rgb(245,242,241);
+  position: relative;
+}
+
+.custom-navbar::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0; 
+  width: 100%;
+  height: 1px;
+  background-color: transparent;
+  box-shadow: 0 4px 0 0 black;
+  filter: blur(1.8px);
+}
+
+.title{
+  font-size: 1.4em;
+}
+
+.custom-footer {
+  font-family: 'Caveat';
+  font-size: 1.4em;
+  background-color:  rgb(246,242,241);
+  position: relative;
+}
+
+.custom-footer::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0; 
+  width: 100%;
+  height: 1px;
+  background-color: transparent;
+  box-shadow: 0 -4px 0 0 black;
+  filter: blur(1.8px);
+}
+
 #root {
-  max-width: 1280px;
+  width: 100%;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+  height: 180px;
+  border-radius: 50%;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.welcome-section{
+  margin-top: 1em;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.paragraph{
+    font-family: 'Yuji Syuku';
+    font-size: 2em;
 }
 
 .card {
@@ -39,4 +82,13 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.dropdown-toggle::after {
+  display: none !important;
+}
+
+.App {
+  width: 100%;
+  overflow-x: hidden;
 }
