--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ html, body {
 .custom-navbar {
   width: 100%;
   font-family: 'Caveat';
-  font-size: 2em;
+  font-size: 2.2em;
   background-color: rgb(245,242,241);
   position: relative;
 }
@@ -34,6 +34,10 @@ html, body {
 
 .title{
   font-size: 1.4em;
+}
+
+.title1{
+    font-size: 0.7em;
 }
 
 .custom-footer {
@@ -91,4 +95,65 @@ html, body {
 .App {
   width: 100%;
   overflow-x: hidden;
+}
+
+.responsive-icon {
+  width: 37px;
+  height: auto;
+}
+
+.weather{
+  font-size: 1.4rem;
+  padding: 0.5em 1em;
+}
+
+
+@media (max-width: 800px) {  
+  .custom-navbar {
+  font-size: 1.4em;
+  }
+
+  .responsive-icon {
+    width: 22px;
+  }
+
+  .paragraph {
+  font-size: 1.4em;
+  }
+
+  .weather {
+  font-size: 0.8em;
+  }
+
+  .title {
+  font-size: 1em;
+  }
+
+  .custom-footer {
+    font-size: 1.2em;
+  }
+
+  .logo {
+    height: 120px;
+
+  }
+}
+
+@media (max-width: 576px) {
+  .responsive-icon {
+    width: 25px;
+  }
+
+ .paragraph {
+  font-size: 1.2em;
+  }
+
+  .weather {
+  font-size: 1em;
+  }
+
+  .custom-footer {
+    font-size: 1em;
+  }
+
 }
