update colorsection and booksection styles

--- a/src/assets/bookSection.css
+++ b/src/assets/bookSection.css
@@ -1,8 +1,83 @@
+.book-card {
+    max-width: 280px;
+    background-color: rgb(245,242,241);
+    font-family: 'Caveat', cursive, serif;
+    margin-left: auto;
+  margin-right: auto;
+    
+}
+
+.card-title {
+    font-size: 1.6em;
+    font-weight: lighter;
+}
+
+.card-text {
+font-size: 1.3em;
+} 
+
 .book-card img {
-  width: 100%;
-  height: auto;
-  object-fit: contain;
-  display: block;
-  margin: 0 auto;
-  max-height: 300px;
+    width: 100%;
+    object-fit: contain;
+    display: block;
+    margin-top: 1.5em;
+    max-height: 300px;
+}
+
+.b-details-btn, .b-buy-btn {
+    padding: 0.6em 1em; 
+    font-size: 1.3em;
+}
+
+@media (max-width: 850px) {
+.book-card {
+    max-width: 200px;
+    background-color: rgb(245,242,241);
+    font-family: 'Caveat', cursive, serif;
+}
+
+.card-title {
+    font-size: 1.3em;
+    font-weight: lighter;
+}
+
+.book-card img {
+    width: 100%;
+    object-fit: contain;
+    display: block;
+    margin-top: 1.5em;
+    max-height: 250px;
+}
+
+.b-details-btn, .b-buy-btn {
+    padding: 0.6em 0.7em; 
+    font-size: 1em;
+}
+
+}
+
+@media (max-width: 576px) {
+.book-card {
+    max-width: 250px;
+    background-color: rgb(245,242,241);
+    font-family: 'Caveat', cursive, serif;
+}
+
+.card-title {
+    font-size: 1.3em;
+    font-weight: lighter;
+}
+
+.book-card img {
+    width: 100%;
+    object-fit: contain;
+    display: block;
+    margin-top: 1.5em;
+    max-height: 300px;
+}
+
+.b-details-btn, .b-buy-btn {
+    padding: 0.6em 0.7em; 
+    font-size: 1.2em;
+}
 }
