--- a/src/assets/colorSection.css
+++ b/src/assets/colorSection.css
@@ -9,9 +9,10 @@
 
 .color-image-col,
 .color-text-col {
-  flex: 1; 
-  height: 100%;
+    flex:1;
+    height: 100%;
 }
+
 
 .color-image-col img {
   width: 100%;
@@ -39,4 +40,60 @@
     font-size: 1.9rem;
     margin-top: 0.5rem;
     margin-bottom: 1rem;
+}
+
+.color-button.dark-hover:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white !important;
+  border-color: white !important;
+}
+
+.color-button.light-hover:hover {
+  background-color: rgba(255, 255, 255, 0.85);
+  color: black !important;
+  border-color: black !important;
+}
+
+.theme-text {
+    font-size: 1.9rem;
+}
+
+@media (max-width: 850px) {
+.color-text-col .kanji {
+    font-size: 2rem;
+}
+
+.color-text-col .translation {
+    font-size: 1.2rem;
+}
+
+.color-section {
+  width: 100%;
+  height: 200px; 
+  display: flex;
+  flex-direction: row;
+  margin: 0 auto;
+  overflow: hidden;
+}
+
+}
+
+@media (max-width: 576px) {
+.color-text-col .kanji {
+    font-size: 2rem;
+}
+
+.color-text-col .translation {
+    font-size: 1.2rem;
+}
+
+.color-section {
+  width: 100%;
+  height: 220px; 
+  display: flex;
+  flex-direction: row;
+  margin: 0 auto;
+  overflow: hidden;
+}
+
 }
