--- a/src/assets/colorSection.css
+++ b/src/assets/colorSection.css
@@ -13,7 +13,6 @@
     height: 100%;
 }
 
-
 .color-image-col img {
   width: 100%;
   height: 100%;
@@ -58,6 +57,26 @@
     font-size: 1.9rem;
 }
 
+.details-title {
+    font-size: 2.3em;
+}
+
+.color-rgb, .description, .story {
+    font-size: 1.6em;
+}
+
+.paint-icon {
+  height: 40px;
+  width: auto;
+  margin-top: 0.2em;
+}
+
+.details-icon {
+height: 30px;
+  width: auto;
+   margin-top: 0.2em;
+}
+
 @media (max-width: 850px) {
 .color-text-col .kanji {
     font-size: 2rem;
@@ -94,6 +113,10 @@
   flex-direction: row;
   margin: 0 auto;
   overflow: hidden;
+}
+
+.details-title {
+    font-size: 2em;
 }
 
 }
