--- a/src/assets/welcomeSection.css
+++ b/src/assets/welcomeSection.css
@@ -28,7 +28,8 @@ p {
 }
 
 .season-button {
-    padding: 0.4em 0.8em; 
+  font-size: 1.2rem !important;
+  padding: 1em 1.2em;
 }
 
 @media (max-width: 850px) {
@@ -57,6 +58,7 @@ p {
 
 .season-button {
   font-size: 0.8em;
+  background-color: transparent;
   width: 100px;
 }
 
