--- a/src/assets/colorSection.css
+++ b/src/assets/colorSection.css
@@ -81,6 +81,10 @@ height: 30px;
    margin-top: 0.2em;
 }
 
+.color-p {
+    font-family:"Hina Mincho" ;
+}
+
 @media (max-width: 850px) {
 .color-text-col .kanji {
     font-size: 2rem;
