--- a/src/assets/colorSection.css
+++ b/src/assets/colorSection.css
@@ -2,9 +2,6 @@
   width: 100%;
   height: 300px; 
   display: flex;
-  flex-direction: row;
-  margin: 0 auto;
-  overflow: hidden;
 }
 
 .color-image-col,
@@ -85,6 +82,13 @@
   font-family:"Hina Mincho" ;
 }
 
+.decription{
+  width: 500px;
+  flex-direction: row;
+  align-items: end;
+  justify-content: end;
+}
+
 @media (max-width: 850px) {
 .color-text-col .kanji {
   font-size: 2rem;
@@ -127,4 +131,19 @@
   font-size: 2em;
 }
 
+}
+
+@keyframes fadeSlideIn {
+  from {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.color-animate {
+  animation: fadeSlideIn 0.6s ease-out;
 }
