--- a/src/assets/colorSection.css
+++ b/src/assets/colorSection.css
@@ -75,7 +75,7 @@
 .details-icon {
   height: 30px;
   width: auto;
-  margin-top: 0.2em;
+  margin-top: 0.3em;
 }
 
 .color-p {
@@ -146,4 +146,43 @@
 
 .color-animate {
   animation: fadeSlideIn 0.6s ease-out;
+}
+
+@keyframes fadeSlideUp {
+  from {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes fadeSlideDown {
+  from {
+    opacity: 0;
+    transform: translateY(-90px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.fade-down-cascade {
+  opacity: 0;
+  animation: fadeSlideDown 1.8s ease-out forwards;
+}
+
+.fade-delay-1 {
+  animation-delay: 0.5s;
+}
+
+.fade-delay-2 {
+  animation-delay: 1s;
+}
+
+.fade-delay-3 {
+  animation-delay: 1.5s;
 }
