add bookdetails animation

--- a/src/assets/bookSection.css
+++ b/src/assets/bookSection.css
@@ -44,7 +44,7 @@
 }
 
 .buy-button:hover, .details-button:hover {
-    background-color: #fcf6f0 !important;
+    background-color: #f6ebdf !important;
     color: #4b3820 !important;
 }
 
