--- a/src/assets/colorSection.css
+++ b/src/assets/colorSection.css
@@ -75,7 +75,7 @@
 .details-icon {
   height: 30px;
   width: auto;
-  margin-top: 0.3em;
+  margin-top: 0.2em;
 }
 
 .color-p {
@@ -109,6 +109,18 @@
 
 }
 
+.details-title {
+  font-size: 2em;
+}
+
+.color-rgb strong, .description strong, .story strong {
+  font-size: 1em;
+}
+
+.theme-text {
+  font-size: 1.9rem;
+}
+
 @media (max-width: 576px) {
 .color-text-col .kanji {
   font-size: 2rem;
@@ -128,7 +140,24 @@
 }
 
 .details-title {
-  font-size: 2em;
+  font-size: 1.8em;
+}
+
+.color-rgb strong, .description strong, .story strong {
+  font-size: 0.9em;
+}
+
+.paint-icon {
+  height: 33px;
+  margin-top: 0.2em;
+}
+
+.details-icon {
+  height: 25px;
+}
+
+.theme-text {
+  font-size: 1.5rem;
 }
 
 }
@@ -162,7 +191,7 @@
 @keyframes fadeSlideDown {
   from {
     opacity: 0;
-    transform: translateY(-110px);
+    transform: translateY(-90px);
   }
   to {
     opacity: 1;
@@ -172,17 +201,17 @@
 
 .fade-down-cascade {
   opacity: 0;
-  animation: fadeSlideDown 2s ease-out forwards;
+  animation: fadeSlideDown 2.5s ease-out forwards;
 }
 
-.fade-delay-1 {
+.fade-down-cascade.fade-delay-1 {
   animation-delay: 0.5s;
 }
 
-.fade-delay-2 {
+.fade-down-cascade.fade-delay-2 {
   animation-delay: 1s;
 }
 
-.fade-delay-3 {
+.fade-down-cascade.fade-delay-3 {
   animation-delay: 1.5s;
 }
