add alert and cart style

--- a/src/assets/user.css
+++ b/src/assets/user.css
@@ -20,5 +20,9 @@ font-size: 1.5rem;
 }
 
 .custom-dropdown .dropdown-menu strong {
-     font-family: "Hina Mincho";
+    font-family: "Hina Mincho";
+}
+
+.cart-badge {
+  font-family: "Hina Mincho", serif;
 }
