--- a/src/assets/tearoom.css
+++ b/src/assets/tearoom.css
@@ -16,6 +16,25 @@
     margin-top: 0.7em;
 }
 
+.reservation-calendar {
+  font-size: 1.5rem;
+}
+
+.reservation-calendar td,
+.reservation-calendar th {
+  min-width: 100px;
+  height: 100px;
+  vertical-align: middle;
+  padding: 0.5rem;
+}
+
+.reservation-calendar button {
+  width: 100%;
+  height: 100%;
+  font-size: 0.9rem;
+  padding: 0.4rem;
+}
+
 
 .fade-in {
   opacity: 0;
