--- a/src/assets/colorSection.css
+++ b/src/assets/colorSection.css
@@ -1,6 +1,6 @@
 .color-section {
   width: 100%;
-  height: 300px; 
+  height: 330px; 
   display: flex;
 }
 
@@ -64,6 +64,11 @@
 
 .color-rgb, .description, .story {
   font-size: 1.6em;
+  text-align: justify;
+  max-width: 900px;
+  margin-left: auto;
+  margin-right: auto;
+  line-height: 1.7;
 }
 
 .paint-icon {
