--- a/src/assets/user.css
+++ b/src/assets/user.css
@@ -78,3 +78,11 @@
 .item-title {
   font-weight: bold;
 }
+
+.item-price {
+  font-size: 1rem;
+}
+
+.digital-card, .digital-card strong {
+   font-family:  "Hina Mincho", serif;
+}
