--- a/src/App.css
+++ b/src/App.css
@@ -102,6 +102,7 @@ html, body {
 .logo {
   height: 160px;
   border-radius: 50%;
+  margin-left: -0px;
 }
 
 .logo-mobile {
@@ -111,6 +112,7 @@ html, body {
 
 .title{
   font-size: 1.4em;
+  margin-left: 7px;
 }
 
 .title1{
@@ -135,6 +137,11 @@ html, body {
   background-color: transparent;
   box-shadow: 0 -4px 0 0 black;
   filter: blur(1.8px);
+}
+
+.shadow {
+  margin-left: -10px;
+  margin-right: 20px;
 }
 
 @media (max-width: 850px) {  
