--- a/src/App.css
+++ b/src/App.css
@@ -22,8 +22,8 @@ html, body {
 
 .custom-navbar {
   width: 100%;
-  font-family: 'Caveat';
-  font-size: 1.8em;
+  font-family: 'Hina Mincho';
+  font-size: 1.5em;
   background-color: rgb(245,242,241);
   position: relative;
 }
@@ -75,8 +75,13 @@ html, body {
   display: none !important;
 }
 
+.rescart {
+  width: 33px;
+  margin-bottom: 5px;
+}
+
 .responsive-icon {
-  width: 37px;
+  width: 33px;
   height: auto;
 }
 
@@ -97,10 +102,11 @@ html, body {
   border-radius: 10px;
   white-space: nowrap;
   font-size: 0.6em;
+  font-size: 0.7em;
 }
 
 .logo {
-  height: 130px;
+  height: 95px;
   border-radius: 50%;
 }
 
