--- a/src/assets/welcomeSection.css
+++ b/src/assets/welcomeSection.css
@@ -84,17 +84,25 @@ p {
 }
 
 .season-button {
-  font-size: 0.8em;
-  background-color: transparent;
-  width: 100px;
+  font-size: 1em !important;
+  width: 120px;
 }
 
 p {
-   font-size: 0.9rem;
+  font-size: 0.9rem;
 }
 
 .welcome-icon {
   height: 35px;
+}
+
+.welcomep {
+  font-size: 1.6em;
+  margin-top: 0.8em;
+}
+
+.welcomep-it {
+ font-size: 1.3em;
 }
 
 }
@@ -135,4 +143,10 @@ p {
   width: 140px;
   padding: 0.4em 0.5em; 
 }
+
+.welcomep {
+  font-size: 2em;
+  margin-top: 0.8em;
+}
+
 }
