spinner and font fixing

--- a/src/assets/bookdetails.css
+++ b/src/assets/bookdetails.css
@@ -4,12 +4,12 @@
 }
 
 strong {
-  font-family: 'Caveat', cursive, serif;
-  font-size: 1.6em;
-  font-weight: lighter;
+  font-family: 'Hina Mincho', cursive, serif;
+  font-size: 1.1em;
+  font-weight: bold;
 }
 
-h3 {
+h4 {
  font-family: 'Caveat', cursive, serif;
 }
 
