--- a/src/assets/welcomeSection.css
+++ b/src/assets/welcomeSection.css
@@ -29,6 +29,8 @@
 
 .weather strong {
    font-size: 1.6rem;
+   font-family: 'Caveat';
+   font-weight: lighter;
 }
 
 .weather-icon {
@@ -39,6 +41,7 @@
   font-size: 1.6rem;
   padding-top: 0.4em;
   margin-bottom: 0.5em;
+  font-weight: lighter;
 }
 
 .season-title-jp {
